--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "stinky",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@dimforge/rapier3d-compat": "^0.14.0",
